syntax = "proto3";

package hassmic;

option java_package = "com.thejeffcooper.hassmic.proto";
option java_multiple_files = true;


// Information that the client sends about itself
message ClientInfo {
  // The version, for example "0.9.2"
  string version = 1;
  string uuid = 2;
}

// A ping message
message Ping {
}

message AudioData {
  bytes data = 1;
}

// https://developer.android.com/reference/androidx/media3/common/Player.State
enum MediaPlayerState {
  STATE_UNKNOWN = 0;
  STATE_IDLE = 1;
  STATE_BUFFERING = 2;
  STATE_READY = 3;
  STATE_ENDED = 4;
  STATE_PLAYING = 5;
  STATE_PAUSED = 6;
}

// The different media players available
enum MediaPlayerId {
  ID_UNKNOWN = 0;

  // The normal music/audio playback player
  ID_PLAYBACK = 1;

  // The announce player
  ID_ANNOUNCE = 2;
}


// Tell the server that a client event occurred
message ClientEvent {
  // A media player has changed state
  message MediaPlayerStateChange {
    MediaPlayerId player = 1;
    MediaPlayerState new_state = 2;
  }

  // A media player has changed volume
  message MediaPlayerVolumeChange {
    MediaPlayerId player = 1;
    float new_volume = 2;
  }

  // The device volume has changed
  message DeviceVolumeChange {
    float new_volume = 1;
  }

  oneof event {
    MediaPlayerStateChange media_player_state_change = 1;
    MediaPlayerVolumeChange media_player_volume_change = 2;
    DeviceVolumeChange device_volume_change = 3;
  }
}


// The wrapper message that actually gets sent to the server
message ClientMessage {
  oneof msg {
    Ping ping = 1;
    ClientInfo client_info = 2;
    AudioData audio_data = 3;
    ClientEvent client_event = 4;
  }
}

// Play an audio file
message PlayAudio {
  // Whether this should be an announcement or not
  bool announce = 1;

  // The url to play
  string url = 2;
}

// The wrapper message that gets sent from the server to the client
message ServerMessage {
  oneof msg {
    // A command to play audio
    PlayAudio play_audio = 1;

    // Set whether the mic should be muted
    bool set_mic_mute = 2;
  }
}
